<resources>
    <string name="app_name">Training App</string>
    <string name="get_contacts_button_text">Get Contacts</string>
    <string name="hint_text">Здесь будет отображаться список контактов</string>
    <string name="second_activity_button_text">Back to Activity 1</string>
    <string name="edit_text_hint">Write your message</string>
    <string name="navigate_to_second_activity_button_text">Go to Second activity</string>
    <string name="navigate_to_first_fragment_button_text">Go to First fragment</string>
    <string name="navigate_to_second_fragment_button_text">Go to Second fragment</string>
    <string name="navigate_to_second_graph_fragment_button_text">Go to Second graph fragment</string>
    <string name="navigate_to_first_graph_fragment_button_text">Go to First graph fragment</string>
    <string name="search_hiking">Search Hiking</string>
    <string name="crate_new">Crate new</string>
    <string name="print_your_summer_memories">Print your summer memories</string>
    <string name="enjoy_free_shipping_on_photo_books">Enjoy free shipping on photo books</string>
    <string name="photo_book">Photo book</string>
    <string name="get_data">Get Data</string>
    <string name="received_data_text">Полученные данные от worker: %1$s</string>
    <string name="received_data_last_fragment">Данные, полученные от предыдущего фрагмента: %1$s</string>
    <string name="go_to_mainfragment">Go to MainFragment</string>
    <string name="sent_data">Sent Data</string>
    <string name="choose_getdatafragment">Choose GetDataFragment</string>
    <string name="choose_uploadusersfragment">Choose UploadUsersFragment</string>

    <string name="select_fragment_title">Please, select fragment</string>
</resources>