<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/receivedData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/received_data_text"
        android:layout_marginVertical="15dp"/>

    <Button
        android:id="@+id/getDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/get_data"
        android:textAllCaps="false"
        android:layout_marginVertical="15dp"/>

    <Button
        android:id="@+id/sentDataToLastFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sent_data"
        android:textAllCaps="false"
        android:layout_marginVertical="15dp"
        android:textSize="15sp" />

</androidx.appcompat.widget.LinearLayoutCompat>