<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/sent_data_edit_text_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_hint"
        android:inputType="text"
        android:textSize="16sp"
        android:maxWidth="0.5dp"
        android:minHeight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/navigate_to_second_graph_fragment"/>

    <Button
        android:id="@+id/navigate_to_second_graph_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigate_to_second_graph_fragment_button_text"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sent_data_edit_text_fragment"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/navigate_to_first_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_activity_button_text"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/navigate_to_second_graph_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>